<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScienceFragment"
    android:orientation="vertical">
    <LinearLayout
        style="@style/buttonRow"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/buttonSin"
            android:text="@string/sinText"
            style="@style/button.portraitScience"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonCos"
            android:text="@string/cosText"
            style="@style/button.portraitScience"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonTan"
            android:text="@string/tanText"
            style="@style/button.portraitScience"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonLeftP"
            android:text="@string/leftParenthesisText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonRightP"
            android:text="@string/rightParenthesisText"
            style="@style/button"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/buttonPower"
            android:text="@string/xPowerYText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonAllClear"
            android:text="@string/clearText"
            style="@style/button.operator.portraitScience"
            android:textColor="@color/eraseColor"
            android:onClick="onClear" />

        <Button
            android:id="@+id/buttonEraseOne"
            android:text="@string/eraseText"
            style="@style/button.operator"
            android:textColor="@color/eraseColor"
            android:onClick="onEraseOne" />

        <Button
            android:id="@+id/buttonRemainder"
            android:text="@string/reminderText"
            style="@style/button.operator"
            android:onClick="onOperator"/>

        <Button
            android:id="@+id/buttonDivide"
            android:text="@string/divideText"
            style="@style/button.operator"
            android:onClick="onOperator" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/buttonSqrt"
            android:text="@string/squareRootText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonSeven"
            android:text="@string/sevenText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonEight"
            android:text="@string/eightText"
            style="@style/button"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/buttonNine"
            android:text="@string/nineText"
            style="@style/button"
            android:onClick="onDigit"/>
        <Button
            android:id="@+id/buttonMultiply"
            android:text="@string/multiplyText"
            style="@style/button.operator"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/buttonLg"
            android:text="@string/logText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonFour"
            android:text="@string/fourText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonFive"
            android:text="@string/fiveText"
            style="@style/button"
            android:onClick="onDigit" />

        <Button
            android:id="@+id/buttonSix"
            android:text="@string/sixText"
            style="@style/button"
            android:onClick="onDigit" />

        <Button
            android:id="@+id/buttonSubtract"
            android:text="@string/minusText"
            style="@style/button.operator"
            android:onClick="onOperator" />

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/buttonLn"
            android:text="@string/lnText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonOne"
            android:text="@string/oneText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonTwo"
            android:text="@string/twoText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonThree"
            android:text="@string/threeText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonPlus"
            android:text="@string/plusText"
            style="@style/button.operator"
            android:onClick="onOperator"/>

    </LinearLayout>

    <LinearLayout
        style="@style/buttonRow">

        <Button
            android:id="@+id/buttonPL"
            android:text="@string/switchText"
            style="@style/button.operator"
            android:onClick="onSwitchToBasic"/>

        <Button
            android:id="@+id/buttonE"
            android:text="@string/eText"
            style="@style/button"
            android:onClick="onScience"/>

        <Button
            android:id="@+id/buttonZero"
            android:text="@string/zeroText"
            style="@style/button"
            android:onClick="onDigit"/>

        <Button
            android:id="@+id/buttonDecimal"
            android:text="@string/decimalText"
            style="@style/button"
            android:onClick="onDecimalPoint"/>

        <Button
            android:id="@+id/buttonEqual"
            android:text="@string/equalText"
            style="@style/button.operator"
            android:onClick="onEqual"/>

    </LinearLayout>
</LinearLayout>